--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="">
+    <link rel="icon" href="imagenes/dwqmyofjjl3rjeazph7k.avif">
 </head>
 
 <body>
