Organizada la estructura

--- a/index.html
+++ b/index.html
@@ -1,16 +1,155 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>El Colombiano | noticias de Medellín, Antioquia, Colombia y el mundo.</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="imagenes/dwqmyofjjl3rjeazph7k.avif">
+    <link rel="icon" href="recursos/dwqmyofjjl3rjeazph7k.avif">
 </head>
 
 <body>
+    <div class="layout">
+        <section class="news-layout">
 
+            <!-- Columna izquierda -->
+            <section class="column-left">
+                <article class="news-left">
+                    <div class="news-left-main">
+                        <div class="news-video"><img src="recursos/image.png" alt="" width="185"></div>
+                        <h6 class="tag-left">🟣 Videos</h6>
+                        <div class="news-left-text">
+                            <h4>Las cuatro embarradas de Petro esta semana</h4>
+                        </div>
+                        <div class="meta-left">
+                            <div class="meta-left-time">
+                                <h6>Hace 34 minutos.</h6>
+                            </div>
+                            <div class="meta-left-share">
+                                <img src="recursos/Sharethis-grey.svg.png" alt="" width="20" height="20">
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="news-left-secondary-main">
+                            <h6 class="tag-left">🟡 Cultura</h6>
+                            <div class="news-left-secondary-text">
+                                <h4>¿Una más? Nueva escultura monumental del dios griego Apolo se exhibe en la
+                                    Comuna 13
+                                </h4>
+                                <div class="meta-left-secondary">
+                                    <div class="meta-left-secondary-time">
+                                        <h6>Hace 1 hora.</h6>
+                                    </div>
+                                    <div class="meta-left-secondary-share">
+                                        <img src="recursos/Sharethis-grey.svg.png" alt="" width="20" height="20">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+            </section>
+
+            <!-- Columna centro -->
+            <section class="column-center">
+                <article class="news-center">
+                    <div class="news-center-main">
+                        <div class="news-image">
+                            <img src="recursos/presidente-de-camara-julian-david-lo_48825371_20250919181042.webp" alt=""
+                                width="400">
+                        </div>
+                        <div class="news-center-text">
+                            <div class="news-center-header">
+                                <div class="tag-center">
+                                    <h6>🟢 Economía</h6>
+                                </div>
+                                <div class="meta-center">
+                                    <div class="meta-center-time">
+                                        <h6>Hace 2 horas.</h6>
+                                    </div>
+                                    <div class="meta-center-share">
+                                        <img src="recursos/Sharethis-grey.svg.png" alt="" width="20" height="20">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="news-center-title">
+                                <h2>Cámara envía a la Corte actas de la reforma pensional en medio de disputa por vicios
+                                    de trámite</h2>
+                            </div>
+                            <div class="highlight-center">
+                                <blockquote>
+                                    Asofondos pide plazo para activar la reforma pensional si la Corte
+                                    Constitucional la
+                                    avala
+                                </blockquote>
+                                <hr>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+            </section>
+
+            <!-- Columna derecha -->
+            <section class="column-right">
+                <article class="news-right">
+                    <div class="news-right-main">
+
+                        <div>
+                            <h6 class="tag-right">🟡 Medellín</h6>
+                            <div class="news-right-text">
+                                <h6>Tras emotiva despedida sepultaron a Nairkel, el niño de 4 años que fue golpeado
+                                    brutalmente por su padrastro en Medellín</h6>
+                            </div>
+                            <div class="meta-right">
+                                <div class="meta-right-time">
+                                    <h6>Hace 1 hora.</h6>
+                                </div>
+                                <div class="meta-right-share">
+                                    <img src="recursos/Sharethis-grey.svg.png" alt="" width="20" height="20">
+                                </div>
+                            </div>
+                            <hr>
+                        </div>
+
+                        <div>
+                            <h6 class="tag-right">🔴 Colombia</h6>
+                            <div class="news-right-text">
+                                <h6>Expresidente Santos reveló que un magistrado le ofreció tumbar el plebiscito de
+                                    2016: esto dijo</h6>
+                            </div>
+                            <div class="meta-right">
+                                <div class="meta-right-time">
+                                    <h6>Hace 6 horas.</h6>
+                                </div>
+                                <div class="meta-right-share">
+                                    <img src="recursos/Sharethis-grey.svg.png" alt="" width="20" height="20">
+                                </div>
+                            </div>
+                            <hr>
+                        </div>
+                        <div>
+                            <h6 class="tag-right">🔵 Ciencia</h6>
+                            <div class="news-right-text">
+                                <h6>El equipo de Francisco Lopera halla una pista que anticiparía el diagnóstico de
+                                    alzhéimer décadas antes</h6>
+                            </div>
+                            <div class="meta-right">
+                                <div class="meta-right-time">
+                                    <h6>Hace 7 horas.</h6>
+                                </div>
+                                <div class="meta-right-share">
+                                    <img src="recursos/Sharethis-grey.svg.png" alt="" width="20" height="20">
+                                </div>
+                            </div>
+                        </div>
+                        <hr>
+
+                    </div>
+                </article>
+            </section>
+        </section>
+    </div>
 </body>
 
 </html>
