--- a/index.html
+++ b/index.html
@@ -6,11 +6,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="imagenes/dwqmyofjjl3rjeazph7k.avif">
+    <link rel="icon" href="recursos/dwqmyofjjl3rjeazph7k.avif">
 </head>
 
 <body>
+    <footer>
+        <p>
+            <img src="recursos/logo-el-colombiano-blanco.png" alt="logo el colombiano">
+        <p>
 
+            COPYRIGHT © 2025 EL COLOMBIANO S.A.S
+            </BR>
+            <BR>
+            NIT: 890901352-3
+            </BR>
+            <br>Carrera 48 N° 30 Sur - 119, Envigado, Antioquia, Colombia.</BR>
+        <p><BR>CONMUTADOR: <B class="solo-blanco">(57) (604) 3315252</B class="solo-blanco"></p>
+        <BR>ATENCIÓN AL CLIENTE: <B class="solo-blanco">(57) (604) 3393333</B class="solo-blanco"></BR>
+        <BR><B class="solo-blanco">servicio@elcolombiano.com.co</B class="solo-blanco"></BR>
+        <BR>
+        *Para asuntos relacionados con peticiones, quejas y reclamos (PQR), <B class="solo-blanco">haz clic aquí</B
+            class="solo-blanco"></BR>
+        <BR>PROGRAMA DE TRANSPARENCIA Y ÉTICA EMPRESARIAL:</BR>
+        <Br> <b class="solo-blanco">oficialdecumplimiento@elcolombiano.com.co</b class="solo-blanco"></BR>
+        <br> *Buzón exclusivo para notificaciones judiciales:</br>
+        <Br> <b class="solo-blanco">oficialdecumplimiento@elcolombiano.com.co</b class="solo-blanco"></BR>
+        </p>
+        <p>
+            <b class="solo-blanco">
+                <BR>GRUPO EL COLOMBIANO</BR>
+                <BR>CONTÁCTANOS</BR>
+                <BR>TÉRMINOS Y CONDICIONES</BR>
+                <BR>POLÍTICA DE PRIVACIDAD</BR>
+                <BR>SUPERINTENDENCIA DE INDUSTRIA Y COMERCIO</BR>
+            </b class="solo-blanco">
+        </p>
+
+        <p>
+            <bR>REDES SOCIALES </br>
+            <BR> <img src="recursos/facebook.png" alt="facebook" width="70px" height="70px"> <img
+                src="recursos/twitter.png" alt="twitter" width="70px" height="70px"> <img src="recursos/instagram.png"
+                alt="instagram" width="70px" height="70px"> <img src="recursos/youtube.png" alt="youtube" width="70px"
+                height="70px"> </BR>
+            <br> MIEMBRO DE:</br>
+        </p>
+
+    </footer>
 </body>
 
 </html>
