--- a/index.html
+++ b/index.html
@@ -7,149 +7,151 @@
     <title>El Colombiano | noticias de Medellín, Antioquia, Colombia y el mundo.</title>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="recursos/dwqmyofjjl3rjeazph7k.avif">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 
 <body>
-    <div class="layout">
-        <section class="news-layout">
+    <div class="container text-center">
+        <div class="row align-items-start" style="display: flex; flex-direction: row; align-items: center;
+        justify-content: center; position: relative; top: 2rem;">
+            <div class="col-3">
+                <div class="card text-start" style=" display: flex; flex-direction: column;width: 19rem; border: none;">
+                    <img src="recursos/image.png" class="card-img-top" alt="..." style="border-radius: 0px;">
+                    <div class="" style="position: relative; top: 0.55rem; left: -0.15rem;">
+                        <h6 style="font-size: 10px;font-weight: bold;">🟣 Videos</h6>
+                    </div>
+                    <div class="card-body" style="position: relative; left: -1rem; top: -0.9rem; font-weight: bold;">
+                        <p class="card-text">Las cuatro embarradas de Petro esta semana</p>
+                    </div>
+                    <div class="container" style="position: relative; left: 3.2rem;">
 
-            <!-- Columna izquierda -->
-            <section class="column-left">
-                <article class="news-left">
-                    <div class="news-left-main">
-                        <div class="news-video"><img src="recursos/image.png" alt="" width="185"></div>
-                        <h6 class="tag-left">🟣 Videos</h6>
-                        <div class="news-left-text">
-                            <h4>Las cuatro embarradas de Petro esta semana</h4>
+                        <div
+                            style="font-size: 10px; position: relative; left: 8rem; top: -1.5rem; display: flex; flex-direction: row; gap: 1rem; font-weight: bold;">
+                            Hace 34 minutos.
                         </div>
-                        <div class="meta-left">
-                            <div class="meta-left-time">
-                                <h6>Hace 34 minutos.</h6>
-                            </div>
-                            <div class="meta-left-share">
-                                <img src="recursos/Sharethis-grey.svg.png" alt="" width="20" height="20">
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="news-left-secondary-main">
-                            <h6 class="tag-left">🟡 Cultura</h6>
-                            <div class="news-left-secondary-text">
-                                <h4>¿Una más? Nueva escultura monumental del dios griego Apolo se exhibe en la
-                                    Comuna 13
-                                </h4>
-                                <div class="meta-left-secondary">
-                                    <div class="meta-left-secondary-time">
-                                        <h6>Hace 1 hora.</h6>
-                                    </div>
-                                    <div class="meta-left-secondary-share">
-                                        <img src="recursos/Sharethis-grey.svg.png" alt="" width="20" height="20">
-                                    </div>
-                                </div>
-                            </div>
+                        <div style="position: relative; top: -2.8rem; left: 14rem;">
+                            <img src=" recursos/Sharethis-grey.svg.png" alt="" width="20" height="20">
                         </div>
                     </div>
-                </article>
-            </section>
+                </div>
+                <hr>
+                <div class="card text-start" style=" display: flex; flex-direction: column;width: 15rem; border: none;">
+                    <div class="" style="position: relative; top: 0.5rem; left: -0.15rem;">
+                        <h6 style="font-size: 10px;font-weight: bold;">🟡 Cultura</h6>
+                    </div>
+                    <div class="card-body" style="position: relative; left: -1rem; top: -0.9rem; font-weight: bold;">
+                        <p class="card-text">¿Una más? Nueva escultura monumental del dios griego Apolo se exhibe en la
+                            Comuna 13
+                        </p>
+                    </div>
+                    <div class="container" style="position: relative; left: 3.2rem;">
 
-            <!-- Columna centro -->
-            <section class="column-center">
-                <article class="news-center">
-                    <div class="news-center-main">
-                        <div class="news-image">
-                            <img src="recursos/presidente-de-camara-julian-david-lo_48825371_20250919181042.webp" alt=""
-                                width="400">
+                        <div
+                            style="font-size: 10px; position: relative; left: 9.4rem; top: -1.5rem; display: flex; flex-direction: row; gap: 1rem; font-weight: bold;">
+                            Hace 1 hora.
                         </div>
-                        <div class="news-center-text">
-                            <div class="news-center-header">
-                                <div class="tag-center">
-                                    <h6>🟢 Economía</h6>
-                                </div>
-                                <div class="meta-center">
-                                    <div class="meta-center-time">
-                                        <h6>Hace 2 horas.</h6>
-                                    </div>
-                                    <div class="meta-center-share">
-                                        <img src="recursos/Sharethis-grey.svg.png" alt="" width="20" height="20">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="news-center-title">
-                                <h2>Cámara envía a la Corte actas de la reforma pensional en medio de disputa por vicios
-                                    de trámite</h2>
-                            </div>
-                            <div class="highlight-center">
-                                <blockquote>
-                                    Asofondos pide plazo para activar la reforma pensional si la Corte
-                                    Constitucional la
-                                    avala
-                                </blockquote>
-                                <hr>
-                            </div>
+                        <div style="position: relative; top: -2.8rem; left: 14rem;">
+                            <img src=" recursos/Sharethis-grey.svg.png" alt="" width="20" height="20">
                         </div>
                     </div>
-                </article>
-            </section>
-
-            <!-- Columna derecha -->
-            <section class="column-right">
-                <article class="news-right">
-                    <div class="news-right-main">
-
-                        <div>
-                            <h6 class="tag-right">🟡 Medellín</h6>
-                            <div class="news-right-text">
-                                <h6>Tras emotiva despedida sepultaron a Nairkel, el niño de 4 años que fue golpeado
-                                    brutalmente por su padrastro en Medellín</h6>
-                            </div>
-                            <div class="meta-right">
-                                <div class="meta-right-time">
-                                    <h6>Hace 1 hora.</h6>
-                                </div>
-                                <div class="meta-right-share">
-                                    <img src="recursos/Sharethis-grey.svg.png" alt="" width="20" height="20">
-                                </div>
-                            </div>
-                            <hr>
-                        </div>
-
-                        <div>
-                            <h6 class="tag-right">🔴 Colombia</h6>
-                            <div class="news-right-text">
-                                <h6>Expresidente Santos reveló que un magistrado le ofreció tumbar el plebiscito de
-                                    2016: esto dijo</h6>
-                            </div>
-                            <div class="meta-right">
-                                <div class="meta-right-time">
-                                    <h6>Hace 6 horas.</h6>
-                                </div>
-                                <div class="meta-right-share">
-                                    <img src="recursos/Sharethis-grey.svg.png" alt="" width="20" height="20">
-                                </div>
-                            </div>
-                            <hr>
-                        </div>
-                        <div>
-                            <h6 class="tag-right">🔵 Ciencia</h6>
-                            <div class="news-right-text">
-                                <h6>El equipo de Francisco Lopera halla una pista que anticiparía el diagnóstico de
-                                    alzhéimer décadas antes</h6>
-                            </div>
-                            <div class="meta-right">
-                                <div class="meta-right-time">
-                                    <h6>Hace 7 horas.</h6>
-                                </div>
-                                <div class="meta-right-share">
-                                    <img src="recursos/Sharethis-grey.svg.png" alt="" width="20" height="20">
-                                </div>
-                            </div>
-                        </div>
-                        <hr>
-
+                </div>
+            </div>
+            <div class="col-6"
+                style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+                <div class="card text-start" style=" display: flex; flex-direction: column;width: 30rem; border: none;">
+                    <img src="recursos/presidente-de-camara-julian-david-lo_48825371_20250919181042.webp"
+                        class="card-img-top" alt="..." style="border-radius: 0px;">
+                    <div class="" style="position: relative; top: 0.55rem; left: -0.15rem;">
+                        <h6 style="font-size: 10px; font-weight: bold;">🟢 Economía</h6>
                     </div>
-                </article>
-            </section>
-        </section>
+                    <div class="container" style="position: relative; left: 14rem; top: 0.69rem;">
+
+                        <div
+                            style="font-size: 10px; position: relative; left: 8rem; top: -1.5rem; display: flex; flex-direction: row; gap: 1rem; font-weight: bold;">
+                            Hace 2 horas.
+                        </div>
+                        <div style="position: relative; top: -2.8rem; left: 14rem;">
+                            <img src=" recursos/Sharethis-grey.svg.png" alt="" width="20" height="20">
+                        </div>
+                    </div>
+                    <div class="card-body"
+                        style="position: relative; left: -1rem; top: -2.5rem; font-size: 30px; font-weight: bold;">
+                        <p class="card-text">Cámara envía a la Corte actas de la reforma pensional en medio de disputa
+                            por
+                            vicios
+                            de trámite</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card text-start" style=" display: flex; flex-direction: column;width: 19rem; border: none;">
+                    <div class="" style="position: relative; top: 0.4rem; left: -0.15rem;">
+                        <h6 style="font-size: 15px;font-weight: bold;">🟡 Medellín</h6>
+                    </div>
+                    <div class="card-body" style="position: relative; left: -1rem; top: -0.9rem; font-weight: bold;">
+                        <p class="card-text">Tras emotiva despedida sepultaron a Nairkel, el niño de 4 años que fue
+                            golpeado
+                            brutalmente por su padrastro en Medellín</p>
+                    </div>
+                    <div class="container" style="position: relative; left: 0.7rem;">
+
+                        <div
+                            style="font-size: 10px; position: relative; left: 8rem; top: -1.5rem; display: flex; flex-direction: row; gap: 1rem; font-weight: bold;">
+                            Hace 1 hora.
+                        </div>
+                        <div style="position: relative; top: -2.8rem; left: 14rem;">
+                            <img src=" recursos/Sharethis-grey.svg.png" alt="" width="20" height="20">
+                        </div>
+                    </div>
+                </div>
+                <div class="card text-start" style=" display: flex; flex-direction: column;width: 19rem; border: none;">
+                    <div class="" style="position: relative; top: 0.4rem; left: -0.15rem;">
+                        <h6 style="font-size: 15px;font-weight: bold;">🔴 Colombia</h6>
+                    </div>
+                    <div class="card-body" style="position: relative; left: -1rem; top: -0.9rem; font-weight: bold;">
+                        <p class="card-text">Expresidente Santos reveló que un magistrado le ofreció tumbar el
+                            plebiscito de
+                            2016: esto dijo</p>
+                    </div>
+                    <div class="container" style="position: relative; left: 0.7rem;">
+
+                        <div
+                            style="font-size: 10px; position: relative; left: 8rem; top: -1.5rem; display: flex; flex-direction: row; gap: 1rem; font-weight: bold;">
+                            Hace 6 hora.
+                        </div>
+                        <div style="position: relative; top: -2.8rem; left: 14rem;">
+                            <img src=" recursos/Sharethis-grey.svg.png" alt="" width="20" height="20">
+                        </div>
+                    </div>
+                </div>
+                <div class="card text-start" style=" display: flex; flex-direction: column;width: 19rem; border: none;">
+                    <div class="" style="position: relative; top: 0.4rem; left: -0.15rem;">
+                        <h6 style="font-size: 15px;font-weight: bold;">🔵 Ciencia</h6>
+                    </div>
+                    <div class="card-body" style="position: relative; left: -1rem; top: -0.9rem; font-weight: bold;">
+                        <p class="card-text">El equipo de Francisco Lopera halla una pista que anticiparía el
+                            diagnóstico de
+                            alzhéimer décadas antes</p>
+                    </div>
+                    <div class="container" style="position: relative; left: 0.7rem;">
+
+                        <div
+                            style="font-size: 10px; position: relative; left: 8rem; top: -1.5rem; display: flex; flex-direction: row; gap: 1rem; font-weight: bold;">
+                            Hace 7 hora.
+                        </div>
+                        <div style="position: relative; top: -2.8rem; left: 14rem;">
+                            <img src=" recursos/Sharethis-grey.svg.png" alt="" width="20" height="20">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr>
+        </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
