Secciones creadas y listas

--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
                             vicios
                             de trámite</p>
                     </div>
+                    <span style="border-left: solid 1px; position: relative; top: -2.5rem; padding-left:2rem ;">
+                        Asofondos pide plazo para activar la reforma pensional si la Corte
+                        Constitucional la
+                        avala
+
+                    </span>
                 </div>
             </div>
             <div class="col-3">
@@ -146,9 +152,150 @@
                     </div>
                 </div>
             </div>
-            <hr>
         </div>
     </div>
+    <hr>
+    <br>
+    <section class="container">
+        <section class="row" style="display: flex; gap: 5rem;">
+            <article class="col" style="margin-right: -2.5rem;">
+                <div class="card text-start" style="width: 19rem; border: none;">
+                    <img src="recursos/colp-ext-141823-98291_48897624_20250929220045.webp" class="card-img-top"
+                        alt="..." style="border-radius: 0px;">
+                    <div class="" style="position: relative; top: 0.55rem; left: -0.15rem;">
+                        <h6 style="font-size: 10px;font-weight: bold;">🔴 Colombia</h6>
+                    </div>
+                    <div class="card-body" style="position: relative; left: -1rem; top: -0.9rem; font-weight: bold;">
+                        <p class="card-text">Florián, de nuevo, defendió su identidad de género: “Hablo en femenino
+                            porque soy persona y marica”, en foro en Lima</p>
+                    </div>
+                    <div class="container" style="position: relative; left: 3.2rem; top: 0.5rem;">
+
+                        <div
+                            style="font-size: 10px; position: relative; left: 8rem; top: -1.5rem; display: flex; flex-direction: row; gap: 1rem; font-weight: bold;">
+                            <h1></h1>
+                        </div>
+                        <div style="position: relative; top: -2.8rem; left: 14rem;">
+                            <img src=" recursos/Sharethis-grey.svg.png" alt="" width="20" height="20">
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="col">
+                <div class="card text-start" style="width: 19rem; border: none;">
+                    <img src="recursos/petrovisa-web_48897718_20250929215234.webp" class="card-img-top" alt="..."
+                        style="border-radius: 0px;">
+                    <div class="" style="position: relative; top: 0.55rem; left: -0.15rem;">
+                        <h6 style="font-size: 10px;font-weight: bold;">🔴 Colombia</h6>
+                    </div>
+                    <div class="card-body" style="position: relative; left: -1rem; top: -0.9rem; font-weight: bold;">
+                        <p class="card-text">Petro y “leales” de su gabinete se quedaron sin visa, pero por ahora Trump
+                            no toca a Colombia, ¿lo hará?</p>
+                    </div>
+                    <div class="container" style="position: relative; left: 3.2rem;">
+                        <div
+                            style="font-size: 10px; position: relative; left: 8rem; top: -1.5rem; display: flex; flex-direction: row; gap: 1rem; font-weight: bold;">
+                            Hace 1 hora.
+                        </div>
+                        <div style="position: relative; top: -2.8rem; left: 14rem;">
+                            <img src=" recursos/Sharethis-grey.svg.png" alt="" width="20" height="20">
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="col">
+            </article>
+            <article class="col" style="position: relative; left: 5rem;">
+                    <div style="border-bottom:2px solid yellow ;">
+                        <h2>Foros <br>El Colombiano</h2>
+                    </div>
+                    <br>
+                    <img src="recursos/Democracia_EAFIT.gif" alt="" width="300px">
+                    <br>
+                    <br>
+                    <img src="recursos/59c68ed37294eaef764404264d41130c.gif" alt="">
+                </article>
+        </section>
+    </section>
+    <section class="container" style="position: relative; top: -15rem;">
+        <section class="row">
+            <section class="row align-items-start" style="display: flex; gap: 3.5rem;">
+                <article class="col-3" style="margin-right: -1rem;">
+                    <div class="card text-start" style="width: 19rem;border: none;">
+                        <img src="recursos/trump-afp_48898090_20250930065730.webp" class="card-img-top" alt="..."
+                            style="border-radius: 0px;">
+                        <div class="" style="position: relative; top: 0.55rem; left: -0.15rem;">
+                            <h6 style="font-size: 10px;font-weight: bold;">🔴 Estados Unidos</h6>
+                        </div>
+                        <div class="card-body"
+                            style="position: relative; left: -1rem; top: -0.9rem; font-weight: bold;">
+                            <p class="card-text">Así fue el video que publicó Trump en redes que reavivó la teoría
+                                conspirativa que promete curaciones totales</p>
+                        </div>
+                        <div class="container" style="position: relative; left: 3.2rem;">
+
+                            <div
+                                style="font-size: 10px; position: relative; left: 8rem; top: -1.5rem; display: flex; flex-direction: row; gap: 1rem; font-weight: bold;">
+                                Hace 1 hora.
+                            </div>
+                            <div style="position: relative; top: -2.8rem; left: 14rem;">
+                                <img src=" recursos/Sharethis-grey.svg.png" alt="" width="20" height="20">
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="col-3">
+                    <div class="card text-start" style="width: 19rem;border: none;">
+                        <img src="recursos/diseno-sin-titulo-2025-09-29t15073_48892737_20250929150745.webp"
+                            class="card-img-top" alt="..." style="border-radius: 0px; width: 310px;">
+                        <div class="" style="position: relative; top: 0.55rem; left: -0.15rem;">
+                            <h6 style="font-size: 10px;font-weight: bold;">🔴 Mundo</h6>
+                        </div>
+                        <div class="card-body"
+                            style="position: relative; left: -1rem; top: -0.9rem; font-weight: bold;">
+                            <p class="card-text">Los negocios de Angie Miller, la modelo señalada en el caso B-King y
+                                Regio
+                                Clown</p>
+                        </div>
+                        <div class="container" style="position: relative; left: 3.2rem;">
+
+                            <div
+                                style="font-size: 10px; position: relative; left: 8rem; top: -1.5rem; display: flex; flex-direction: row; gap: 1rem; font-weight: bold;">
+                            </div>
+                            <div style="position: relative; top: -0.2rem; left: 14rem;">
+                                <img src=" recursos/Sharethis-grey.svg.png" alt="" width="20" height="20">
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="col-3" style="margin-left: -1rem;">
+                    <div class="card text-start" style="width: 19rem;border: none;">
+                        <img src="recursos/image-trump-meets-netanyahu-at_48898079_20250930063931.webp"
+                            class="card-img-top" alt="..." style="border-radius: 0px;">
+                        <div class="" style="position: relative; top: 0.55rem; left: -0.15rem;">
+                            <h6 style="font-size: 10px;font-weight: bold;">🔴 Mundo</h6>
+                        </div>
+                        <div class="card-body"
+                            style="position: relative; left: -1rem; top: -0.9rem; font-weight: bold;">
+                            <p class="card-text">Así es el plan de 20 puntos de Trump para poner fin a la guerra de Gaza
+                                que
+                                recibió aprobación de Israel y espera respuesta de...</p>
+                        </div>
+                        <div class="container" style="position: relative; left: 3.2rem;">
+
+                            <div
+                                style="font-size: 10px; position: relative; left: 8rem; top: -1.5rem; display: flex; flex-direction: row; gap: 1rem; font-weight: bold;">
+                                Hace 1 hora.
+                            </div>
+                            <div style="position: relative; top: -2.8rem; left: 14rem;">
+                                <img src=" recursos/Sharethis-grey.svg.png" alt="" width="20" height="20">
+                            </div>
+                        </div>
+                    </div>
+                </article>
+            </section>
+        </section>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
