--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!-- Sección principal -->
     <div class="container text-center">
         <div class="row align-items-start" style="display: flex; flex-direction: row; align-items: center;
         justify-content: center; position: relative; top: 2rem;">
@@ -206,15 +207,15 @@
             <article class="col">
             </article>
             <article class="col" style="position: relative; left: 5rem;">
-                    <div style="border-bottom:2px solid yellow ;">
-                        <h2>Foros <br>El Colombiano</h2>
-                    </div>
-                    <br>
-                    <img src="recursos/Democracia_EAFIT.gif" alt="" width="300px">
-                    <br>
-                    <br>
-                    <img src="recursos/59c68ed37294eaef764404264d41130c.gif" alt="">
-                </article>
+                <div style="border-bottom:2px solid yellow ;">
+                    <h2>Foros <br>El Colombiano</h2>
+                </div>
+                <br>
+                <img src="recursos/Democracia_EAFIT.gif" alt="" width="300px">
+                <br>
+                <br>
+                <img src="recursos/59c68ed37294eaef764404264d41130c.gif" alt="">
+            </article>
         </section>
     </section>
     <section class="container" style="position: relative; top: -15rem;">
@@ -296,6 +297,8 @@
             </section>
         </section>
     </section>
+    <!-- Final Sección Principal -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
