Combinada la rama de header y corregidos algunos cambios

--- a/HeaderColombiano/Colombiano.html
+++ b/HeaderColombiano/Colombiano.html
@@ -9,7 +9,7 @@
 
 <!-- Header principal -->
 
-<header>
+<header class="header">
   <div class="izquierdo">
 
     <!-- Iconos superiores izquierdo -->
