--- a/index.html
+++ b/index.html
@@ -377,7 +377,75 @@
         </section>
     </div>
     <!-- Final Sección Principal -->
+    <div class="pie">
+        <section class="container-fluid"
+            style=" display: flex; background-color: black; flex-direction: column; justify-content: center;">
+            <footer class="pie-de-pagina">
+                <div class="principal">
+                    <div class="seccion1">
+                        <div class="logo">
+                            <p>
+                                <img src="recursos/el colombiano.png" alt="logo el colombiano" width="70px"
+                                    height="70px">
 
+                            <p>
+                        </div>
+                        <div class="coso">
+                            <p>COPYRIGHT © 2025 EL COLOMBIANO S.A.S</p>
+                            <p>NIT: 890901352-3</p>
+                            <p>Carrera 48 N° 30 Sur - 119, Envigado, Antioquia, Colombia.</p>
+                            <p>CONMUTADOR: <B class="solo-blanco">(57) (604) 3315252</B class="solo-blanco"></p>
+                            <p>ATENCIÓN AL CLIENTE: <B class="solo-blanco">(57) (604) 3393333</B class="solo-blanco">
+                            </p>
+                            <p><B class="solo-blanco">servicio@elcolombiano.com.co</B></p>
+                            <p>*Para asuntos relacionados con peticiones, quejas y reclamos (PQR),<BR><b class="solo-blanco">haz clic aquí</N></p>
+                                    <h6>PROGRAMA DE TRANSPARENCIA Y ÉTICA EMPRESARIAL:</h6>
+                                    <b class="solo-blanco">oficialdecumplimiento@elcolombiano.com.co</b>
+                                    <h6>*Buzón exclusivo para notificaciones judiciales:</h6>
+                                    <b class="solo-blanco">oficialdecumplimiento@elcolombiano.com.co</b
+                                        class="solo-blanco">
+                        </div>
+                        <div class="enlaces">
+                            <b class="solo-blanco">
+                                GRUPO EL COLOMBIANO<BR>
+                                <BR>CONTÁCTANOS<BR>
+                                <BR>TÉRMINOS Y CONDICIONES<BR>
+                                <BR>POLÍTICA DE PRIVACIDAD<BR>
+                                <BR>SUPERINTENDENCIA DE INDUSTRIA Y COMERCIO
+                            </b class="solo-blanco">
+                        </div>
+                        <div class="logos1">
+                            REDES SOCIALES <br> <br>
+                            <div class="redes">
+                                <img src="recursos/facebook.png" alt="facebook" width="40px" height="40px">
+                                <img src="recursos/youtube.png" alt="youtube" width="50px" height="50px">
+                                <img src="recursos/twitter.png" alt="twitter" width="35px" height="35px">
+                                <img src="recursos/instagram.png" alt="instagram" width="40px" height="40px">
+                                <img src="recursos/linkedin.png" alt="linkedin" width="44px" height="44px">
+                            </div>
+                            </p>
+                            <br> MIEMBRO DE:</br>
+                            <br>
+                            <div class="miembros">
+                                <img src="recursos/ami.png" alt="ami" width="40px" height="40px">
+                                <img src="recursos/iab.png" alt="iab" width="40px" height="40px">
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <hr class="linea">
+                    <div class="seccion2">
+                        <br>
+                        <img src="recursos/propiedades.png" alt="facebook" width="65px" height="65px">
+                        <img src="recursos/qhubo.png" alt="twitter" width="65px" height="65px">
+                        <img src="recursos/generacion.png" alt="instagram" width="60px" height="60px">
+                        <img src="recursos/masificado.png" alt="youtube" width="65px" height="65px">
+                        </br>
+                    </div>
+                </div>
+            </footer>
+        </section>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
